--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body>
 	<header>
 	<div class="wrapper fullWidth">
-		<div class="dev"><div id="close_slide"></div><div class="stuff"></div></div>
-		<div class="design"><div id="close_slide"></div><div class="stuff"></div></div>
-		<div class="contact"><div id="close_slide"></div><div class="stuff"></div></div>
+		<div class="dev" id="code"><div id="close_slide"></div><div class="stuff"></div></div>
+		<div class="design" id="design"><div id="close_slide"></div><div class="stuff"></div></div>
+		<div class="contact" id="contact"><div id="close_slide"></div><div class="stuff"></div></div>
 	<!--<img src="images/logo.png" class="logo">-->
 	<div class="largeWrap">
 	<p>
